<resources>
    <string name="app_name">Week Recipe</string>

    <string name="input_account">Email:</string>
    <string name="input_password">Password:</string>
    <string name="input_confirmPassword">Confirm：</string>
    <string name="input_UserName">User Name:</string>
    <string name="input_FoodName">Food Name:</string>
    <string name="input_FoodType">Food Type:</string>
    <string name="input_FoodIngredients">Food Ingredients:</string>
    <string name="input_Name">Name:</string>
    <string name="input_FoodQuantity">Food Quantity:</string>
    <string name="input_RateOfFoodType">Rate Of Food Type:</string>

    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_save">Save</string>
    <string name="button_back">Back</string>
    <string name="button_add">Add</string>
    <string name="button_logout">Logout</string>
    <string name="button_confirm">Confirm</string>

    <string name="text_loading">Loading...</string>
    <string name="text_registerTitle">New User</string>
    <string name="text_noFood">No food now</string>
    <string name="text_noFavouriteFood">No favourite food now</string>
    <string name="text_noRecipe">No recipe now</string>
    <string name="text_noIngredient">No Ingredient</string>
    <string name="text_noFavouriteWeekRecipe">No favourite recipe now</string>
    <string name="text_choosePlease">Choose please</string>
    <string name="text_inputFoodName">Input food name</string>
    <string name="text_inputFavouriteName">Input favourite name</string>
    <string name="text_inputFavouriteFoodName">Input favourite food name</string>
    <string name="text_createNewFood">Create New Food</string>
    <string name="text_monday">Monday</string>
    <string name="text_tuesday">Tuesday</string>
    <string name="text_wednesday">Wednesday</string>
    <string name="text_thursday">Thursday</string>
    <string name="text_friday">Friday</string>
    <string name="text_saturday">Saturday</string>
    <string name="text_sunday">Sunday</string>
    <string name="text_useOnlineDatabase">Use Online Database</string>
    <string name="text_newEmptyRecipe">New Empty Recipe</string>

    <string name="calendar_monday_simple">Mon</string>
    <string name="calendar_tuesday_simple">Tue</string>
    <string name="calendar_wednesday_simple">Wed</string>
    <string name="calendar_thursday_simple">Thu</string>
    <string name="calendar_friday_simple">Fri</string>
    <string name="calendar_saturday_simple">Sat</string>
    <string name="calendar_sunday_simple">Sun</string>

    <string name="foodType_meat">Meat</string>
    <string name="foodType_vegetable">Vegetable</string>
    <string name="foodType_cereals">Cereals</string>
    <string name="foodType_beans">Beans</string>
    <string name="foodType_eggs">Eggs</string>
    <string name="foodType_dairyProducts">Dairy Products</string>
    <string name="foodType_aquaticProducts">Aquatic Products</string>
    <string name="foodType_fruit">Fruit</string>
    <string name="foodType_other">Other</string>

    <string name="nullData">null</string>

    <string name="title_homepage">Homepage</string>
    <string name="title_setting">Settings</string>
    <string name="title_pictureProcessing">Picture Processing(test)</string>
    <string name="title_QRCodeScan">QR Code Scan(test)</string>
    <string name="title_reset">Reset</string>
    <string name="title_addToFavourite">Save to favourite</string>
    <string name="title_setByFavourite">Set by favourite</string>
    <string name="title_resetDate">Back to today</string>
    <string name="title_resetWeek">Back to this week</string>
    <string name="title_favouriteFood">Favourite Food</string>
    <string name="title_favouriteRecipe">Favourite Recipe</string>
    <string name="title_todayRecipe">Today Recipe</string>
    <string name="title_weekRecipe">Week Recipe</string>
    <string name="title_myInformation">My Information</string>
    <string name="title_breakfast">Breakfast</string>
    <string name="title_lunch">Lunch</string>
    <string name="title_dinner">Dinner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>