<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/data">
        <item
            android:id="@+id/nav_todayRecipeFragment"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/title_todayRecipe" />
        <item
            android:id="@+id/nav_weekRecipeFragment"
            android:icon="@android:drawable/ic_menu_week"
            android:title="@string/title_weekRecipe" />
        <item
            android:id="@+id/nav_userInformationFragment"
            android:icon="@drawable/ic_action_user_info"
            android:title="@string/title_myInformation" />
    </group>
    <group
        android:id="@+id/other">
        <item
            android:id="@+id/nav_settingsFragment"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/title_setting" />
    </group>

</menu>