<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_item_setByFavourite"
        android:icon="@drawable/ic_button_set_by_favourite"
        android:orderInCategory="0"
        android:title="@string/title_setByFavourite"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_item_addToFavourite"
        android:icon="@drawable/ic_button_add_to_favourite"
        android:orderInCategory="1"
        android:title="@string/title_addToFavourite"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_item_reset"
        android:icon="@drawable/ic_button_reset"
        android:orderInCategory="2"
        android:title="@string/title_reset"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_settingsFragment"
        android:icon="@drawable/ic_action_settings_dark"
        android:orderInCategory="3"
        android:title="@string/title_setting"
        app:showAsAction="always" />
</menu>