<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyRecipeFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/fragment_dailyRecipe_tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fragment_dailyRecipe_tabItem_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_breakfast" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fragment_dailyRecipe_tabItem_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_lunch" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fragment_dailyRecipe_tabItem_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_dinner" />
    </com.google.android.material.tabs.TabLayout>

    <fragment
        android:id="@+id/fragment_dailyRecipe_fragment"
        android:name="com.example.week_recipe.FoodListFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_dailyRecipe_tabLayout"
        tools:layout="@layout/fragment_food_list" />


</androidx.constraintlayout.widget.ConstraintLayout>