<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_background1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/register_background2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_registerTitle"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/register_background1"
        app:layout_constraintEnd_toEndOf="@+id/register_background1"
        app:layout_constraintStart_toStartOf="@+id/register_background1"
        app:layout_constraintTop_toTopOf="@+id/register_background1" />

    <TextView
        android:id="@+id/register_accountText"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/input_account"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_background1" />

    <EditText
        android:id="@+id/register_EditText_accountNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/register_accountText"
        app:layout_constraintStart_toEndOf="@+id/register_accountText"
        app:layout_constraintTop_toTopOf="@+id/register_accountText"
        android:autofillHints="Account Number"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/register_passwordText"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/input_password"
        android:textSize="20sp"
        android:minWidth="100dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="@+id/register_accountText"
        app:layout_constraintTop_toBottomOf="@+id/register_accountText" />

    <EditText
        android:id="@+id/register_EditText_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:inputType="textPassword"
        android:maxLength="20"
        app:layout_constraintBottom_toBottomOf="@+id/register_passwordText"
        app:layout_constraintStart_toEndOf="@+id/register_passwordText"
        app:layout_constraintTop_toTopOf="@+id/register_passwordText"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5"
        tools:ignore="TextFields"  />

    <TextView
        android:id="@+id/register_confirmPasswordText"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/input_confirmPassword"
        android:textSize="20sp"
        android:minWidth="100dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="@+id/register_passwordText"
        app:layout_constraintTop_toBottomOf="@+id/register_passwordText" />

    <EditText
        android:id="@+id/register_EditText_ConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:inputType="textPassword"
        android:maxLength="20"
        app:layout_constraintBottom_toBottomOf="@+id/register_confirmPasswordText"
        app:layout_constraintStart_toEndOf="@+id/register_confirmPasswordText"
        app:layout_constraintTop_toTopOf="@+id/register_confirmPasswordText"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/register_registerButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="30dp"
        android:text="@string/button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register_backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>