<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.IngredientsListFragment">

    <TextView
        android:id="@+id/fragment_ingredientsList_textView3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:text="@string/input_FoodIngredients"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/fragment_ingredientsList_nameEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="Ingredient Name"
        android:inputType="text"
        android:maxLength="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_ingredientsList_addIngredientButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fragment_ingredientsList_textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/fragment_ingredientsList_addIngredientButton"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:text="@string/button_add"
        android:layout_marginTop="2.5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_ingredientsList_loadView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_ingredientsList_recyclerView"
        app:layout_constraintEnd_toEndOf="@+id/fragment_ingredientsList_recyclerView"
        app:layout_constraintStart_toEndOf="@+id/fragment_ingredientsList_recyclerView"
        app:layout_constraintTop_toTopOf="@+id/fragment_ingredientsList_recyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_ingredientsList_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_ingredientsList_textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fragment_ingredientsList_noDataTextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/text_noIngredient"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_ingredientsList_textView3"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>