<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.UserInformationFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_user_information_userPictureCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#888888"
        app:cardCornerRadius="100dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" >
        <ImageView
            android:id="@+id/fragment_user_information_userImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/user_picture"
            android:src="@drawable/user_picture_background"
            />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/fragment_user_information_textView2"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/input_account"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_user_information_userPictureCardView" />


    <TextView
        android:id="@+id/fragment_user_information_emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nullData"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_user_information_textView2"
        app:layout_constraintStart_toEndOf="@+id/fragment_user_information_textView2"
        app:layout_constraintTop_toTopOf="@+id/fragment_user_information_textView2" />


    <TextView
        android:id="@+id/fragment_user_information_textView3"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:minWidth="75dp"
        android:text="@string/input_UserName"
        android:textSize="20sp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintEnd_toEndOf="@+id/fragment_user_information_textView2"
        app:layout_constraintStart_toStartOf="@+id/fragment_user_information_textView2"
        app:layout_constraintTop_toBottomOf="@+id/fragment_user_information_textView2" />

    <TextView
        android:id="@+id/fragment_user_information_userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nullData"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_user_information_textView3"
        app:layout_constraintStart_toEndOf="@+id/fragment_user_information_textView3"
        app:layout_constraintTop_toTopOf="@+id/fragment_user_information_textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>